--- a/David.html
+++ b/David.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Equipo</title>
+	<title>David</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/estilod.css">
 </head>
@@ -16,7 +16,7 @@
 </header>
 <section id="principal">
 	
-	<h1>Bienvenidos</h1>
+	<h1>(/_-)</h1>
 </section>
 </body>
 </html>
