--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<title>Equipo</title>
+	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <body>
 <header>
 	<nav>
 		<ul>
-		<span>No hay enlaces</span>
+		<li><a href="gustavonouel.html">Gustavo Nouel</a></li>
 		</ul>
 	</nav>
 </header>
