Trabajo en equipo

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<title>Equipo</title>
+	
 </head>
 <body>
 <header>
 	<nav>
 		<ul>
-		<span>No hay enlaces</span>
+		<li><a href="Alexander.html">03</a></li>
 		</ul>
 	</nav>
 </header>
