--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
+		<style type="text/css">
+	h1{
+ font-family: arial;
+ font-size: 40px;
+ color:#33FFCA;
+}
+a{
+	font-size: 30px;
+}
+body{
+	background-color: #DAEAE6;
+}
+ul{
+	text-align: left;
+}
+nav a{
+	text-decoration: none;
+	margin: 60px;
+	color: gray;
+}
+</style>
 	<title>Equipo</title>
 </head>
 <body>
 <header>
 	<nav>
 		<ul>
-		<span>No hay enlaces</span>
+		<span><a href="albany.html">9</a></span>
 		</ul>
 	</nav>
 </header>
 <section id="principal">
-	
-	<h1>Bienvenidos</h1>
+	<center>
+	<h1>Bienvenidos</h1></center>
 </section>
 </body>
 </html>
